config octance
